[package]
name = "dexe"
version = "0.1.1"
edition = "2021"
description = "An agentic x86_64 ELF/PE binary decompiler to functional C99"
license = "Apache-2.0"
repository = "https://github.com/turtle170/dEXE"
readme = "README.md"
keywords = ["decompiler", "disassembler", "x86_64", "reverse-engineering"]
categories = ["development-tools::debugging"]


[dependencies]
object = { version = "0.36", features = ["read"] }
capstone = "0.12"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
